[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.0"
solana-program = "=1.17.0"

[dependencies.ahash]
version = "0.8.6"
default-features = false
features = ["compile-time-rng"]

[workspace.dependencies]
ahash = "0.8.7"

[workspace.metadata.resolver]
version = "2"


